<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dip"
    android:background="@color/color_eee" 
    android:orientation="vertical" >
    <RelativeLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="90dip"    
    	android:background="@color/bg_fb" 
    	android:padding="5dip"
    >
        <TextView
            android:id="@+id/lab_detail_msg"
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"   
         	style="@style/txtAddressStyle"
         	android:text="@string/lab_detail_msg"
         	android:textSize="18sp"
         	android:textColor="@color/font_333"
        />
        <Button 
            android:id="@+id/btn_detail_sendMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/btn_send_msg"
            android:textColor="@color/white"
		    android:paddingLeft="10dip"
		    android:paddingRight="10dip"
		    android:paddingTop="5dip"
		    android:paddingBottom="5dip"
		    android:background="@drawable/btn_red_selector"
            />
        <EditText
         	android:id="@+id/txt_detail_msg"   
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:paddingLeft="5dip"
            android:layout_below="@+id/lab_detail_msg"
            android:hint="@string/hint_detail_msg"
            android:background="@null"
        />
        <TextView
            android:id="@+id/lab_detail_msg_line"
         	android:layout_width="fill_parent"
         	android:layout_height="1dip"   
         	android:layout_marginTop="5dip"
         	android:layout_centerHorizontal="true"
         	android:layout_below="@+id/txt_detail_msg"
         	android:background="@color/theme_color"
        />
    </RelativeLayout>

    <ListView
	     	android:id="@+id/detail_msg_listView"
	     	android:layout_width="fill_parent"
	     	android:layout_height="wrap_content"
	     	android:cacheColorHint="#00000000"   
	     	android:layout_marginTop="5dip"
	     	android:divider="@drawable/div_line"
	     	android:dividerHeight="1dip"
	     	android:background="@color/bg_fb" 
	    />
    
</LinearLayout>
