<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:background="@color/theme_color" 
		android:orientation="horizontal"
	>
	    <Button
	        android:id="@+id/btn_send_category_back"
	     	android:layout_width="wrap_content"
	     	android:layout_height="wrap_content"
	     	android:layout_alignParentLeft="true"
	     	android:layout_centerVertical="true"
	     	android:layout_marginLeft="5dip"
	     	android:background="@drawable/btn_back"
	    />
	    <TextView
	        android:id="@+id/lab_category_list_tit"
	     	android:layout_width="wrap_content"
	     	android:layout_height="wrap_content"
	     	android:layout_centerHorizontal="true"
	     	android:layout_centerVertical="true"
	     	android:layout_marginLeft="5dip"
	     	android:layout_toRightOf="@+id/btn_send_category_back"
	     	android:layout_toLeftOf="@+id/btn_man_category_add"
	     	android:singleLine="true"
	     	style="@style/txtAddressStyle"
	     	android:textSize="22sp"
	     	android:text="@string/lab_select_category"
	    />
	    <Button
	        android:id="@+id/btn_man_category_add"
	     	android:layout_width="wrap_content"
	     	android:layout_height="match_parent"
	     	android:layout_alignParentRight="true"
	     	android:layout_marginRight="10dip"
	     	style="@style/txtAddressStyle"
	     	android:layout_centerVertical="true"
	     	android:textSize="20sp"
	     	android:background="@null"
	     	android:text="@string/btn_add"
	    />
	</RelativeLayout>
	<TextView
	        android:id="@+id/lab_category_notinfo"
		 	android:layout_width="fill_parent"
		 	android:layout_height="match_parent"
		 	android:text="@string/history_NoInfo"
		 	android:textColor="@color/color_999"
		 	android:visibility="gone"
		 	android:gravity="center_vertical|center_horizontal"
		 	android:textSize="25sp"
		 />
	<ListView
	     	android:id="@+id/send_category_listView"
	     	android:layout_width="fill_parent"
	     	android:layout_height="wrap_content"
	     	android:cacheColorHint="#00000000"   
	     	android:layout_marginTop="5dip"
	     	android:divider="@drawable/div_line"
	     	android:visibility="gone"
	     	android:dividerHeight="1dip"
	     	android:background="@color/bg_fb" 
	    />
</LinearLayout>
